RESOLVED FIXED 250908
ASSERTION FAILED: !m_objectStoresByIdentifier.contains(objectStore->info().identifier()) in MemoryIDBBackingStore.cpp
https://bugs.webkit.org/show_bug.cgi?id=250908
Summary ASSERTION FAILED: !m_objectStoresByIdentifier.contains(objectStore->info().id...
Sihui Liu
Reported 2023-01-20 11:53:02 PST
...
Attachments
Sihui Liu
Comment 1 2023-01-20 11:53:16 PST
Sihui Liu
Comment 2 2023-01-20 12:11:37 PST
EWS
Comment 3 2023-01-23 09:31:53 PST
Committed 259215@main (0a51ad5e5ed5): <https://commits.webkit.org/259215@main> Reviewed commits have been landed. Closing PR #8888 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.