Cherry-pick 259215@main (0a51ad5e5ed5). https://bugs.webkit.org/show_bug.cgi?id=250908

ASSERTION FAILED: !m_objectStoresByIdentifier.contains(objectStore->info().identifier()) in MemoryIDBBackingStore.cpp
    https://bugs.webkit.org/show_bug.cgi?id=250908
    rdar://104163599

    Reviewed by Chris Dumez.

    m_deletedObjectStores in MemoryBackingStoreTransaction is used to track deleted object stores that need to be added
    back to database if transaction is aborted, so it should not contain object stores created in the transaction. If an
    object store is created and deleted in the same transaction, database should not have information about the object store
    after transaction finishes.

    * LayoutTests/storage/indexeddb/modern/objectstore-add-delete-abort-expected.txt: Added.
    * LayoutTests/storage/indexeddb/modern/objectstore-add-delete-abort-private-expected.txt: Added.
    * LayoutTests/storage/indexeddb/modern/objectstore-add-delete-abort-private.html: Added.
    * LayoutTests/storage/indexeddb/modern/objectstore-add-delete-abort.html: Added.
    * LayoutTests/storage/indexeddb/modern/objectstore-rename-abort-expected.txt:
    * LayoutTests/storage/indexeddb/modern/objectstore-rename-abort-private-expected.txt:
    * LayoutTests/storage/indexeddb/modern/resources/objectstore-add-delete-abort.js: Copied from LayoutTests/storage/indexeddb/modern/resources/objectstore-rename-abort.js.
    (openDatabase):
    (onDatabaseUpgradeNeeded):
    (onTransactionAbort):
    * LayoutTests/storage/indexeddb/modern/resources/objectstore-rename-abort.js:
    (onDatabaseUpgradeNeeded):
    * Source/WebCore/Modules/indexeddb/server/MemoryBackingStoreTransaction.cpp:
    (WebCore::IDBServer::MemoryBackingStoreTransaction::objectStoreDeleted):

    Canonical link: https://commits.webkit.org/259215@main