LayoutTests/storage/indexeddb/modern/resources/objectstore-add-delete-abort.js
@@ -1,4 +1,4 @@
-description("This test verifies renaming object store can be reverted succesfully if version change transaction aborts.");
+description("This test verifies version change transaction that adds and removes object store can be aborted succesfully.");
 
 setDBNameFromPath();
 function openDatabase()
@@ -13,11 +13,11 @@ function onDatabaseUpgradeNeeded()
     evalAndLog("transaction = openRequest.transaction;");
     transaction.onabort = onTransactionAbort;
     evalAndLog("database = openRequest.result;");
-    evalAndLog("objectStore = database.createObjectStore('os1');");
+    evalAndLog("database.createObjectStore('os1');");
     evalAndLog("database.deleteObjectStore('os1');");
-    evalAndLog("objectStore2 = database.createObjectStore('os2')");
-    evalAndLog("objectStore2.name = 'os1';");
-    evalAndLog("objectStore2.put(1, 1).onsuccess = () => { transaction.abort(); }");
+    // Ensure delete request is proceeded.
+    evalAndLog("objectStore = database.createObjectStore('os2')");
+    objectStore.put(1, 1).onsuccess = () => { transaction.abort(); }
 }
 
 function onTransactionAbort()
@@ -27,6 +27,8 @@ function onTransactionAbort()
     newOpenRequest.onupgradeneeded = (event) => {
         evalAndLog("newDatabase = newOpenRequest.result;");
         shouldBe("newDatabase.objectStoreNames.length", "0");
+        evalAndLog("newObjectStore = newDatabase.createObjectStore('os1');");
+        newObjectStore.put(1, 1).onsuccess = finishJSTest;
     }
     newOpenRequest.onerror = unexpectedErrorCallback;
     newOpenRequest.onsuccess = finishJSTest;
